// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<style>
{
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "color": "rgba(0,102,153,1)",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "13px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <a
    className="S1"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`2. with a given section colour 1`] = `
<style>
{
  "IS1": {
    "color": "blue",
  },
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "13px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <a
    className="IS1 S1"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`3. with given styles 1`] = `
<style>
{
  "IS1": {
    "color": "red",
  },
  "S1": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "13px",
    "line-height": "13px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
  },
}
</style>

<div
  className="S2"
>
  <a
    className="IS1 S1"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;
